Fix the css for the body remove webkit center as it is not supported on Firefox and add margin to top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,10 +13,14 @@ body {
     background-image: linear-gradient(#79caff, #e4e170, #1a913d);
     background-repeat: no-repeat, no-repeat;
     background-position: center;
+    margin-top: 100px;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
     min-height: 100vh;
-    font-family: "Poppins", sans-serif;
+    font-family: "poppins", sans-serif;
     font-weight: 400;
-    text-align: -webkit-center;
+    text-align: center;
     color: #3a3a3a;
 }
 
@@ -192,7 +196,6 @@ h2 {
     }
 
     #quiz{
-        margin: 0px;
         padding: 10px;
         height: 380px;
     }
